--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <section class="main-section">
  <main class="main-content">
    <h1 class="main-content__title">Building an App Design Expertise</h1>
-   <p class="main-content__subtitle">help tech startups design better digital products without hiring a
-   full-time designer</p>
+   <p class="main-content__subtitle">help tech startups design better digital
+products without hiring a full-time designer</p>
    <button class="main-content__button">Schedule free consultation</button>
  </main>
  <div class="image-content">
