--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- <title></title>
- <link rel="stylesheet" href="fonts.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto">
- <link rel="stylesheet" href="style.css">
+  <title></title>
+  <link rel="stylesheet" href="fonts.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto" />
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <div class="wrapper">
-  <header class="header">
-   <div class="logo">
-     <div class="logo__circle logo__circle_color_dark-blue"></div>
-     <div class="logo__circle logo__circle_color_blue"></div>
-     app.creation
-   </div>
- <nav class="menu">
-   <a class="menu__item" href="">start</a>
-   <a class="menu__item" href="">services</a>
-   <a class="menu__item" href="">about</a>
-   <a class="menu__item" href="">blog</a>
-   <a class="menu__item" href="">contact us</a>
- </nav>
-</header>
-<section class="main-section">
- <main class="main-content">
-   <h1 class="main-content__title">Building an App Design Expertise</h1>
-   <p class="main-content__subtitle">help tech startups design better digital
-products without hiring a full-time designer</p>
-   <button class="main-content__button">Schedule free consultation</button>
- </main>
- <div class="image-content">
-   <img class="image-content__image" src="">
- </div>
-</section>
-</div>
+    <header class="header">
+      <div class="logo">
+        <div class="logo__circle logo__circle_color_dark-blue"></div>
+        <div class="logo__circle logo__circle_color_blue"></div>
+        app.creation
+      </div>
+      <nav class="menu">
+        <a class="menu__item" href="">start</a>
+        <a class="menu__item" href="">services</a>
+        <a class="menu__item" href="">about</a>
+        <a class="menu__item" href="">blog</a>
+        <a class="menu__item" href="">contact us</a>
+      </nav>
+    </header>
+    <section class="main-section">
+      <main class="main-content">
+        <h1 class="main-content__title">Building an App Design Expertise</h1>
+        <p class="main-content__subtitle">
+          help tech startups design better digital products without hiring a
+          full-time designer
+        </p>
+        <button class="main-content__button">
+          Schedule free consultation
+        </button>
+      </main>
+      <div class="image-content">
+        <img class="image-content__image" src="" />
+      </div>
+    </section>
+  </div>
 </body>
+
 </html>
