--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title></title>
   <link rel="stylesheet" href="fonts.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -26,9 +26,9 @@
     </header>
     <section class="main-section">
       <main class="main-content">
-        <h1 class="main-content__title">Building an App Design Expertise</h1>
+        <h1 class="main-content__title">Building an App Without Design Expertise</h1>
         <p class="main-content__subtitle">
-          help tech startups design better digital products without hiring a
+          I help tech startups design better digital products without hiring a
           full-time designer
         </p>
         <button class="main-content__button">
