--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
           </span>
         </h1>
         <p class="main__subtitle">
-          I help tech startups design better digital products without hiring a
-          full-time designer
+          I help tech startups design better digital
+          products without hiring a full-time designer
         </p>
         <a class="main__button" href="#">
           Schedule free consultation
