--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title></title>
   <link rel="stylesheet" href="fonts.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" />
   <link rel="stylesheet" href="style.css" />
 </head>
 
